--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -39,4 +39,4 @@ jobs:
           MAVEN_AWS_KEY: ${{ secrets.MIREGO_MAVEN_AWS_ACCESS_KEY_ID }}
           MAVEN_AWS_SECRET: ${{ secrets.MIREGO_MAVEN_AWS_SECRET_ACCESS_KEY }}
         run: |
-          ./gradlew check publish -s
+          ./gradlew check publish -Pdisable_samples -s
