--- a/.gitignore
+++ b/.gitignore
@@ -2,11 +2,20 @@
 .gradle
 /local.properties
 .idea
+.kotlin
 .DS_Store
-/build
-*/build
+build
+build/
+
 /captures
 .externalNativeBuild
 .cxx
 local.properties
 /kotlin-js-store
+/sample/kotlin-js-store
+
+*.pbxuser
+xcuserdata/
+Pods/
+
+sample/shared/
