--- a/gradle.properties
+++ b/gradle.properties
@@ -4,6 +4,10 @@ org.gradle.jvmargs=-Xmx2048M -Dkotlin.daemon.jvm.options\="-Xmx2048M"
 kotlin.code.style=official
 #Android
 android.useAndroidX=true
+#JS
+kotlin.js.ir.output.granularity=whole-program
+kotlin.js.generate.executable.default=true
+kotlin.incremental.js.ir=true
 #MPP
 kotlin.mpp.androidSourceSetLayoutVersion=2
 kotlin.mpp.enableCInteropCommonization=true
